--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
 
 	<dependencies>
+		<!-- 기본으로 생겼던 부분같다 -->
 		<!-- Compile/runtime dependencies -->
 		<dependency>
 			<groupId>com.google.appengine</groupId>
@@ -57,7 +58,7 @@
 			<scope>test</scope>
 		</dependency>
 
-
+		<!-- 여기서부터 2번째 -->
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -65,7 +66,7 @@
 			<version>4.1.3.RELEASE</version>
 		</dependency>
 
-		<!-- 여기서부터 2번째 -->
+		<!-- 여기가 세번째 db추가였던가.  -->
 		<!-- Spring & DB 추가 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -85,7 +86,7 @@
 		</dependency>
 
 
-		<!-- 세번째 DB 추가 -->
+		<!-- db관련 라이브러리 -->
 		<!-- Datanucleus -->
 		<dependency>
 			<groupId>org.datanucleus</groupId>
@@ -107,6 +108,9 @@
 			<artifactId>datanucleus-enhancer</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+		
+		<!-- 이것이 있어야 앱엔진에서 datanucleus 를 쓸 수 있다. 2버젼에서 더 이상 개발안하는듯? -->
+		<!-- 2버젼이 datanucleus 3버젼대를 지원한다. -->
 		<dependency>
 			<groupId>com.google.appengine.orm</groupId>
 			<artifactId>datanucleus-appengine</artifactId>
@@ -180,8 +184,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- Spring & db 추가하면서 -->
-
+			<!-- Spring & db 추가하면서 넣은 플러그인 enhancer를 위해 쓴다 -->
 			<plugin>
 				<groupId>org.datanucleus</groupId>
 				<artifactId>datanucleus-maven-plugin</artifactId>
