--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.02-SNAPSHOT</version>
 
-	<groupId>com.example</groupId>
-	<artifactId>soy-bridge-792</artifactId>
+	<groupId>me.jb</groupId>
+	<artifactId>dackjang</artifactId>
 
 	<properties>
 		<appengine.app.version>1</appengine.app.version>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-1.0-sdk</artifactId>
-			<version>1.9.17</version>
+			<version>1.9.24</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -48,13 +48,13 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-testing</artifactId>
-			<version>1.9.17</version>
+			<version>1.9.24</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-stubs</artifactId>
-			<version>1.9.17</version>
+			<version>1.9.24</version>
 			<scope>test</scope>
 		</dependency>
 
